fix scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1135,19 +1135,3 @@ a.spoiler_links:hover {
 		height: 100px;
 	}
 }
-::-webkit-scrollbar {
-    width: 8px;
-}
- 
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
-    
-
-}
- 
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-    background-color: #1C1C1C;
-}
